# cunit

./: .gitignore  HidGlobal.Tools.CUnit.nuspec
CUnit/Headers/: Automated.h  CBasic.h  CUnit.h  Report_CUnit.h  Report_JUnit.h
CUnit/Sources/Automated/: Automated.c  Report_CUnit.c  Report_JUnit.c
CUnit/Sources/CBasic/: CBasic.c  Makefile  Makefile.am  Makefile.in
CUnit/Sources/CBasic/.deps/: CBasic.Plo
CUnit/Sources/Framework/: TestRun.c  Util.c
Examples/: ExampleTests.c
Examples/AutomatedTest/: AutomatedTest.c
Examples/CBasicTest/: CBasicTest.c  Jamfile  Makefile  Makefile.am  Makefile.in  README
VC2017/: AutomatedTest.vcxproj  AutomatedTest.vcxproj.filters  BasicTest.vcxproj  BasicTest.vcxproj.filters  CBasicTest.vcxproj  CBasicTest.vcxproj.filters  CUnit.sln  ConsoleTest.vcxproj  ConsoleTest.vcxproj.filters  Directory.build.props  Readme.txt  libcunit.vcxproj  libcunit.vcxproj.filters  nuget.config  test_cunit.vcxproj  test_cunit.vcxproj.filters
lib/: libcunit.lib
lib/windows/x64/: libcunit.lib
lib/windows/x86/: libcunit.lib
